[package]
name = "fossair"
version = "0.1.0"
authors = ["Rem Petitjean <remi.petitjean@gmail.com>"]
edition = "2021"
rust-version = "1.75.0"
description = "Generates fake data"
documentation = "https://github.com/fossair/fossair/blob/main/README.md"
homepage = "https://github.com/fossair/fossair"
repository = "https://github.com/fossair/fossair"
readme = "https://github.com/fossair/fossair/blob/main/README.md"
license = "MIT"
license-file = "https://github.com/fossair/fossair/blob/main/LICENSE"
keywords = ["test", "dev"]
categories = []


[lib]
name = "fossair"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]


[dependencies]
rand = "^0.8.5"


[dependencies.pyo3]
version = "^0.20.2"
features = ["extension-module"]
