[tool.poetry]
name = "fossair"
version = "0.1.0"
description = ""
authors = ["Rem <remi.petitjean@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
maturin = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
